# social-engine

./: .gitignore  .gitmodules  CMakeLists.txt  SCsub  SocialEngineDiagram.drawio  james_build.sh  library_build.sh  readme.md
Run/: CMakeLists.txt  main.cpp
RunSocialEngine/: main.cpp
SocialEngine/: CMakeLists.txt  Personality.hpp  SCsub  SocialEngine.cpp  SocialEngine.sln  SocialEngine.vcxproj  SocialEngine.vcxproj.filters  bert_classifier.cpp  bert_classifier.h  bert_embed.cpp  bert_embed.h  classifier.cpp  classifier.h  dialogue.h  embed.cpp  embed.h  global_knowledge.cpp  global_knowledge.h  interaction.h  llama_classifier.cpp  llama_classifier.h  llama_embed.cpp  llama_embed.h  main.cpp  personality.h  responder.cpp  responder.h  social.cpp  social.h  util.cpp  util.h
SocialEngineTest/: CMakeLists.txt  SocialEngineTest.vcxproj  classifier_integration_test.cpp  classifier_test.cpp  compliment_disposition_direction_test.cpp  disposition_direction_test.cpp  embedding_test.cpp  greeting_disposition_direction_test.cpp  insult_disposition_direction_test.cpp  main.cpp  question_disposition_direction_test.cpp  request_disposition_direction_test.cpp  response_test.cpp  statement_disposition_direction_test.cpp  test.cpp  test_util.cpp  test_util.h  util.cpp  util.h
bertCpp/: CMakeLists.txt  SCsub  bert.cpp
bertCpp/examples/: main.cpp  test_tokenizer.cpp
